--- a/scenes.yaml
+++ b/scenes.yaml
@@ -72,6 +72,7 @@
       - 0.388
       entity_id:
       - light.hanging_light_1
+      - light.hanging_light_2
       - light.hanging_light_3
       icon: mdi:lightbulb-group
       friendly_name: Hanging Light
@@ -133,8 +134,8 @@
       - 135
       - 150
       xy_color:
-      - 0.493
-      - 0.301
+      - 0.492958
+      - 0.301015
       entity_id:
       - light.playbar_1_huelight
       - light.playbar_2_huelight
@@ -180,10 +181,10 @@
     light.bonus_room_ceiling_light:
       supported_color_modes:
       - onoff
-      color_mode:
+      color_mode: onoff
       friendly_name: 'Bonus Room Ceiling Light '
       supported_features: 0
-      state: 'off'
+      state: 'on'
     light.guest_bedroom_ceiling_light:
       supported_color_modes:
       - onoff
@@ -213,20 +214,12 @@
       friendly_name: 'Guest Bathroom Light '
       supported_features: 0
       state: 'off'
-    light.guest_bedroom_light_1:
-      supported_color_modes:
-      - onoff
-      color_mode: onoff
-      friendly_name: Guest Bedroom Light 1
-      supported_features: 0
-      state: 'on'
     light.guest_bedroom_light_2:
       supported_color_modes:
       - onoff
-      color_mode:
       friendly_name: Guest Bedroom Light 2
       supported_features: 0
-      state: 'off'
+      state: unavailable
     light.pineapple_light:
       min_color_temp_kelvin: 1500
       max_color_temp_kelvin: 9000
@@ -292,14 +285,14 @@
       supported_features: 0
       state: unavailable
     lock.front_door:
-      changed_by: Manual Lock
-      battery_level: 100
+      changed_by: Mike Babb
+      battery_level: 93
       friendly_name: Front Door
       supported_features: 0
       state: locked
     lock.garage_entry_door:
-      changed_by: Manual Lock
-      battery_level: 52
+      changed_by: Mike Babb
+      battery_level: 44
       friendly_name: Garage Entry Door
       supported_features: 0
       state: locked
@@ -544,38 +537,21 @@
     light.christmas_tree_light:
       supported_color_modes:
       - onoff
-      color_mode: onoff
       friendly_name: Christmas Tree
       supported_features: 0
-      state: 'on'
+      state: unavailable
     light.desk_christmas_lights:
       supported_color_modes:
       - onoff
-      color_mode: onoff
       friendly_name: Desk Christmas Lights
       supported_features: 0
-      state: 'on'
-    light.master_bedroom_christmas_tree:
-      supported_color_modes:
-      - onoff
-      color_mode:
-      friendly_name: Master Bedroom Christmas Tree
-      supported_features: 0
-      state: 'off'
-    light.master_bed_christmas_lights:
-      supported_color_modes:
-      - onoff
-      color_mode:
-      friendly_name: Master Bed Christmas Lights
-      supported_features: 0
-      state: 'off'
+      state: unavailable
     light.stairwell_christmas_lights:
       supported_color_modes:
       - onoff
-      color_mode: onoff
       friendly_name: Stairwell Christmas Lights
       supported_features: 0
-      state: 'on'
+      state: unavailable
     light.fishing_lamp:
       min_color_temp_kelvin: 1500
       max_color_temp_kelvin: 9000
@@ -591,11 +567,11 @@
       effect:
       color_mode: color_temp
       brightness: 128
-      color_temp_kelvin: 2555
+      color_temp_kelvin: 2557
       color_temp: 391
       hs_color:
-      - 28.733
-      - 70.566
+      - 28.728
+      - 70.496
       rgb_color:
       - 255
       - 161
@@ -642,6 +618,83 @@
       friendly_name: Ophelia Light
       supported_features: 0
       state: 'off'
+    light.squiggle_lamp:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode: color_temp
+      brightness: 36
+      color_temp_kelvin: 1500
+      color_temp: 666
+      hs_color:
+      - 25.471
+      - 100
+      rgb_color:
+      - 255
+      - 108
+      - 0
+      xy_color:
+      - 0.635
+      - 0.355
+      friendly_name: Squiggle Lamp
+      supported_features: 36
+      state: 'on'
+    light.goblet_light:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode: color_temp
+      brightness: 48
+      color_temp_kelvin: 1501
+      color_temp: 666
+      hs_color:
+      - 25.487
+      - 100
+      rgb_color:
+      - 255
+      - 108
+      - 0
+      xy_color:
+      - 0.635
+      - 0.355
+      friendly_name: Goblet Light
+      supported_features: 36
+      state: 'on'
+    switch.pixar_lamp_switch:
+      friendly_name: Pixar Lamp
+      state: 'off'
+    light.xbox_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Xbox Light
+      supported_features: 0
+      state: 'off'
+    light.hey_lamp_2_2:
+      supported_color_modes:
+      - onoff
+      color_mode: onoff
+      friendly_name: Hey Lamp 2
+      supported_features: 0
+      state: 'on'
   icon: mdi:weather-night
   metadata:
     light.kitchen_pendants:
@@ -673,8 +726,6 @@
     light.office_ceiling_light:
       entity_only: true
     light.guest_bathroom_light:
-      entity_only: true
-    light.guest_bedroom_light_1:
       entity_only: true
     light.guest_bedroom_light_2:
       entity_only: true
@@ -724,10 +775,6 @@
       entity_only: true
     light.desk_christmas_lights:
       entity_only: true
-    light.master_bedroom_christmas_tree:
-      entity_only: true
-    light.master_bed_christmas_lights:
-      entity_only: true
     light.stairwell_christmas_lights:
       entity_only: true
     light.fishing_lamp:
@@ -741,6 +788,16 @@
     light.pikachu_light:
       entity_only: true
     light.ophelia_light:
+      entity_only: true
+    light.squiggle_lamp:
+      entity_only: true
+    light.goblet_light:
+      entity_only: true
+    switch.pixar_lamp_switch:
+      entity_only: true
+    light.xbox_light:
+      entity_only: true
+    light.hey_lamp_2_2:
       entity_only: true
 - id: '2000310699005'
   name: Daytime
