--- a/scenes.yaml
+++ b/scenes.yaml
@@ -146,10 +146,10 @@
     light.laundry_room_light:
       supported_color_modes:
       - onoff
-      color_mode: onoff
+      color_mode:
       friendly_name: 'Laundry Room Light '
       supported_features: 0
-      state: 'on'
+      state: 'off'
     light.master_bedroom_ceiling_fan_light:
       supported_color_modes:
       - onoff
@@ -181,10 +181,10 @@
     light.bonus_room_ceiling_light:
       supported_color_modes:
       - onoff
-      color_mode: onoff
+      color_mode:
       friendly_name: 'Bonus Room Ceiling Light '
       supported_features: 0
-      state: 'on'
+      state: 'off'
     light.guest_bedroom_ceiling_light:
       supported_color_modes:
       - onoff
@@ -292,7 +292,7 @@
       state: locked
     lock.garage_entry_door:
       changed_by: Mike Babb
-      battery_level: 44
+      battery_level: 43
       friendly_name: Garage Entry Door
       supported_features: 0
       state: locked
@@ -488,10 +488,10 @@
     light.master_bathroom_chili_pepper_lights:
       supported_color_modes:
       - onoff
-      color_mode: onoff
+      color_mode:
       friendly_name: Master Bathroom Chili Pepper Lights
       supported_features: 0
-      state: 'on'
+      state: 'off'
     light.master_bathroom_light_2:
       supported_color_modes:
       - onoff
@@ -566,19 +566,19 @@
       - hs
       effect:
       color_mode: color_temp
-      brightness: 128
-      color_temp_kelvin: 2557
-      color_temp: 391
+      brightness: 74
+      color_temp_kelvin: 1500
+      color_temp: 666
       hs_color:
-      - 28.728
-      - 70.496
+      - 25.471
+      - 100
       rgb_color:
       - 255
-      - 161
-      - 75
+      - 108
+      - 0
       xy_color:
-      - 0.541
-      - 0.389
+      - 0.635
+      - 0.355
       friendly_name: Fishing Lamp
       supported_features: 36
       state: 'on'
@@ -633,10 +633,10 @@
       effect:
       color_mode: color_temp
       brightness: 36
-      color_temp_kelvin: 1500
+      color_temp_kelvin: 1501
       color_temp: 666
       hs_color:
-      - 25.471
+      - 25.487
       - 100
       rgb_color:
       - 255
@@ -691,10 +691,17 @@
     light.hey_lamp_2_2:
       supported_color_modes:
       - onoff
-      color_mode: onoff
+      color_mode:
       friendly_name: Hey Lamp 2
       supported_features: 0
-      state: 'on'
+      state: 'off'
+    light.bonus_room_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Bonus Room Light
+      supported_features: 0
+      state: 'off'
   icon: mdi:weather-night
   metadata:
     light.kitchen_pendants:
@@ -798,6 +805,8 @@
     light.xbox_light:
       entity_only: true
     light.hey_lamp_2_2:
+      entity_only: true
+    light.bonus_room_light:
       entity_only: true
 - id: '2000310699005'
   name: Daytime
