--- a/scenes.yaml
+++ b/scenes.yaml
@@ -281,111 +281,23 @@
       supported_features: 0
       state: 'off'
     lock.back_door:
+      changed_by: Mike Babb
+      battery_level: 87
       friendly_name: Back Door
       supported_features: 0
-      state: unavailable
+      state: locked
     lock.front_door:
       changed_by: Mike Babb
-      battery_level: 93
+      battery_level: 90
       friendly_name: Front Door
       supported_features: 0
       state: locked
     lock.garage_entry_door:
       changed_by: Mike Babb
-      battery_level: 43
+      battery_level: 31
       friendly_name: Garage Entry Door
       supported_features: 0
       state: locked
-    light.rose_light_1:
-      min_color_temp_kelvin: 1500
-      max_color_temp_kelvin: 9000
-      min_mireds: 111
-      max_mireds: 666
-      effect_list:
-      - effect_colorloop
-      - effect_pulse
-      - effect_stop
-      supported_color_modes:
-      - color_temp
-      - hs
-      effect:
-      color_mode:
-      brightness:
-      color_temp_kelvin:
-      color_temp:
-      hs_color:
-      rgb_color:
-      xy_color:
-      friendly_name: Rose Light 1
-      supported_features: 36
-      state: 'off'
-    light.rose_light_2:
-      min_color_temp_kelvin: 1500
-      max_color_temp_kelvin: 9000
-      min_mireds: 111
-      max_mireds: 666
-      effect_list:
-      - effect_colorloop
-      - effect_pulse
-      - effect_stop
-      supported_color_modes:
-      - color_temp
-      - hs
-      effect:
-      color_mode: color_temp
-      brightness: 3
-      color_temp_kelvin: 1501
-      color_temp: 666
-      hs_color:
-      - 25.487
-      - 100
-      rgb_color:
-      - 255
-      - 108
-      - 0
-      xy_color:
-      - 0.635
-      - 0.355
-      friendly_name: Rose Light 2
-      supported_features: 36
-      state: 'on'
-    light.plant_ceiling_light:
-      supported_color_modes:
-      - onoff
-      color_mode:
-      friendly_name: 'Plant Ceiling Light '
-      supported_features: 0
-      state: 'off'
-    light.master_bedroom_tiffany_light_2:
-      min_color_temp_kelvin: 1500
-      max_color_temp_kelvin: 9000
-      min_mireds: 111
-      max_mireds: 666
-      effect_list:
-      - effect_colorloop
-      - effect_pulse
-      - effect_stop
-      supported_color_modes:
-      - color_temp
-      - hs
-      effect:
-      color_mode: color_temp
-      brightness: 51
-      color_temp_kelvin: 1501
-      color_temp: 666
-      hs_color:
-      - 25.487
-      - 100
-      rgb_color:
-      - 255
-      - 108
-      - 0
-      xy_color:
-      - 0.635
-      - 0.355
-      friendly_name: Master Bedroom Tiffany Light
-      supported_features: 36
-      state: 'on'
     light.butterfly_light_1:
       min_color_temp_kelvin: 1500
       max_color_temp_kelvin: 9000
@@ -567,10 +479,10 @@
       effect:
       color_mode: color_temp
       brightness: 74
-      color_temp_kelvin: 1500
+      color_temp_kelvin: 1501
       color_temp: 666
       hs_color:
-      - 25.471
+      - 25.487
       - 100
       rgb_color:
       - 255
@@ -602,13 +514,6 @@
       - onoff
       color_mode:
       friendly_name: Goldfish Light
-      supported_features: 0
-      state: 'off'
-    light.pikachu_light:
-      supported_color_modes:
-      - onoff
-      color_mode:
-      friendly_name: Pikachu Light
       supported_features: 0
       state: 'off'
     light.ophelia_light:
@@ -702,6 +607,113 @@
       friendly_name: Bonus Room Light
       supported_features: 0
       state: 'off'
+    fan.master_bedroom_air_purifier:
+      preset_modes:
+      - auto
+      - sleep
+      percentage: 50
+      percentage_step: 25
+      preset_mode:
+      screen_status: true
+      child_lock: false
+      night_light: 'off'
+      mode: manual
+      friendly_name: Master Bedroom Air Purifier
+      supported_features: 57
+      state: 'on'
+    fan.levoit_vesync_everestair_smart_air_purifier:
+      preset_modes:
+      - auto
+      - sleep
+      - turbo
+      percentage: 66
+      percentage_step: 33.333333333333336
+      preset_mode:
+      screen_status: true
+      child_lock: false
+      night_light: 'off'
+      mode: manual
+      friendly_name: Levoit VeSync EverestAir Smart Air Purifier
+      supported_features: 57
+      state: 'on'
+    light.flower_lamp:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Flower Lamp
+      supported_features: 0
+      state: 'off'
+    light.master_bedroom_tiffany_light_2:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode: color_temp
+      brightness: 51
+      color_temp_kelvin: 1501
+      color_temp: 666
+      hs_color:
+      - 25.487
+      - 100
+      rgb_color:
+      - 255
+      - 108
+      - 0
+      xy_color:
+      - 0.635
+      - 0.355
+      friendly_name: Master Bedroom Tiffany Light
+      supported_features: 36
+      state: 'on'
+    light.rose_light:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode: color_temp
+      brightness: 3
+      color_temp_kelvin: 1501
+      color_temp: 666
+      hs_color:
+      - 25.487
+      - 100
+      rgb_color:
+      - 255
+      - 108
+      - 0
+      xy_color:
+      - 0.635
+      - 0.355
+      entity_id:
+      - light.rose_light_1
+      - light.rose_light_2
+      icon: mdi:lightbulb-group
+      friendly_name: Rose Light
+      supported_features: 36
+      state: 'on'
+    light.plant_ceiling_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Plant Ceiling Light '
+      supported_features: 0
+      state: 'off'
   icon: mdi:weather-night
   metadata:
     light.kitchen_pendants:
@@ -792,8 +804,6 @@
       entity_only: true
     light.goldfish_light:
       entity_only: true
-    light.pikachu_light:
-      entity_only: true
     light.ophelia_light:
       entity_only: true
     light.squiggle_lamp:
@@ -808,8 +818,330 @@
       entity_only: true
     light.bonus_room_light:
       entity_only: true
+    fan.master_bedroom_air_purifier:
+      entity_only: true
+    fan.levoit_vesync_everestair_smart_air_purifier:
+      entity_only: true
+    light.flower_lamp:
+      entity_only: true
+    light.master_bedroom_tiffany_light_2:
+      entity_only: true
+    light.rose_light:
+      entity_only: true
+    light.plant_ceiling_light:
+      entity_only: true
 - id: '2000310699005'
   name: Daytime
   entities: {}
   icon: mdi:white-balance-sunny
   metadata: {}
+- id: '1746735498617'
+  name: Nap time
+  entities:
+    cover.master_bedroom_blinds:
+      current_position: 0
+      entity_id:
+      - cover.master_bedroom_blinds_1
+      - cover.master_bedroom_blinds_2
+      - cover.master_bathroom_blinds
+      friendly_name: Master Bedroom Blinds
+      supported_features: 15
+      state: closed
+    fan.master_bedroom_ceiling_fan:
+      preset_modes: []
+      percentage: 67
+      percentage_step: 33.333333333333336
+      preset_mode:
+      friendly_name: 'Master Bedroom Ceiling Fan '
+      supported_features: 49
+      state: 'on'
+    light.master_bedroom_ceiling_fan_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Master Bedroom Ceiling Fan Light '
+      supported_features: 0
+      state: 'off'
+    light.ophelia_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Ophelia Light
+      supported_features: 0
+      state: 'off'
+    light.rose_light:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
+      entity_id:
+      - light.rose_light_1
+      - light.rose_light_2
+      icon: mdi:lightbulb-group
+      friendly_name: Rose Light
+      supported_features: 36
+      state: 'off'
+    light.pineapple_light:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
+      friendly_name: Pineapple Light
+      supported_features: 36
+      state: 'off'
+    switch.master_bedroom_bomb_grow_light:
+      friendly_name: Bomb Grow Light
+      state: 'off'
+    switch.warocqueanum_bedroom_grow_light_switch:
+      friendly_name: Warocqueanum Grow Light Switch
+      state: 'off'
+    switch.master_bedroom_bird_of_paradise_grow_light_switch:
+      friendly_name: Bird of Paradise Grow Light Switch
+      state: 'off'
+    switch.master_bedroom_kid_s_theme_grow_light_switch:
+      friendly_name: Kid’s Theme Grow Light Switch
+      state: 'off'
+    switch.master_bedroom_pineapple_grow_light_switch:
+      friendly_name: Pineapple Grow Light Switch
+      state: 'off'
+    light.master_bathroom_light_1:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Master Bathroom Light 1 '
+      supported_features: 0
+      state: 'off'
+    light.master_bathroom_light_2:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Master Bathroom Light 2 '
+      supported_features: 0
+      state: 'off'
+    light.master_bedroom_closet_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Master Bedroom Closet Light '
+      supported_features: 0
+      state: 'off'
+    light.master_bedroom_tiffany_light_2:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
+      friendly_name: Master Bedroom Tiffany Light
+      supported_features: 36
+      state: 'off'
+    light.upstairs_hallway_lights:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Upstairs Hallway Lights '
+      supported_features: 0
+      state: 'off'
+    fan.guest_bedroom_dyson_fan:
+      preset_modes:
+      oscillating: false
+      percentage: 20
+      percentage_step: 10
+      preset_mode:
+      friendly_name: Guest Bedroom Dyson Fan
+      supported_features: 51
+      state: 'on'
+    cover.guest_bedroom_blinds:
+      current_position: 0
+      target_lift_position:
+      target_tilt_position:
+      device_class: shade
+      friendly_name: Guest Bedroom Blinds
+      supported_features: 15
+      state: closed
+    light.guest_bedroom_ceiling_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Guest Bedroom Ceiling Light '
+      supported_features: 0
+      state: 'off'
+    light.pixar_lamp:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Pixar Lamp
+      supported_features: 0
+      state: 'off'
+    light.goblet_light:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
+      friendly_name: Goblet Light
+      supported_features: 36
+      state: 'off'
+    light.hey_lamp_3:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Hey Lamp 3
+      supported_features: 0
+      state: 'off'
+    light.squiggle_lamp:
+      min_color_temp_kelvin: 1500
+      max_color_temp_kelvin: 9000
+      min_mireds: 111
+      max_mireds: 666
+      effect_list:
+      - effect_colorloop
+      - effect_pulse
+      - effect_stop
+      supported_color_modes:
+      - color_temp
+      - hs
+      effect:
+      color_mode:
+      brightness:
+      color_temp_kelvin:
+      color_temp:
+      hs_color:
+      rgb_color:
+      xy_color:
+      friendly_name: Squiggle Lamp
+      supported_features: 36
+      state: 'off'
+    switch.guest_bedroom_grow_light:
+      friendly_name: Guest Bedroom Grow Light
+      state: 'off'
+    switch.guest_bedroom_grow_light_2:
+      friendly_name: Guest Bedroom Grow Light 2
+      state: 'off'
+    light.guest_bathroom_light:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: 'Guest Bathroom Light '
+      supported_features: 0
+      state: 'off'
+    light.flower_lamp:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Flower Lamp
+      supported_features: 0
+      state: 'off'
+  icon: mdi:sleep
+  metadata:
+    cover.master_bedroom_blinds:
+      entity_only: true
+    fan.master_bedroom_ceiling_fan:
+      entity_only: true
+    light.master_bedroom_ceiling_fan_light:
+      entity_only: true
+    light.ophelia_light:
+      entity_only: true
+    light.rose_light:
+      entity_only: true
+    light.pineapple_light:
+      entity_only: true
+    switch.master_bedroom_bomb_grow_light:
+      entity_only: true
+    switch.warocqueanum_bedroom_grow_light_switch:
+      entity_only: true
+    switch.master_bedroom_bird_of_paradise_grow_light_switch:
+      entity_only: true
+    switch.master_bedroom_kid_s_theme_grow_light_switch:
+      entity_only: true
+    switch.master_bedroom_pineapple_grow_light_switch:
+      entity_only: true
+    light.master_bathroom_light_1:
+      entity_only: true
+    light.master_bathroom_light_2:
+      entity_only: true
+    light.master_bedroom_closet_light:
+      entity_only: true
+    light.master_bedroom_tiffany_light_2:
+      entity_only: true
+    light.upstairs_hallway_lights:
+      entity_only: true
+    fan.guest_bedroom_dyson_fan:
+      entity_only: true
+    cover.guest_bedroom_blinds:
+      entity_only: true
+    light.guest_bedroom_ceiling_light:
+      entity_only: true
+    light.pixar_lamp:
+      entity_only: true
+    light.goblet_light:
+      entity_only: true
+    light.hey_lamp_3:
+      entity_only: true
+    light.squiggle_lamp:
+      entity_only: true
+    switch.guest_bedroom_grow_light:
+      entity_only: true
+    switch.guest_bedroom_grow_light_2:
+      entity_only: true
+    light.guest_bathroom_light:
+      entity_only: true
+    light.flower_lamp:
+      entity_only: true
