--- a/node-red-scripts/package.json
+++ b/node-red-scripts/package.json
@@ -5,7 +5,11 @@
     "type": "module",
     "scripts": {
         "build": "tsx build.ts -i src -o dist -r",
-        "watch": "tsx build.ts -i src -o dist -r -w"
+        "watch": "tsx build.ts -i src -o dist -r -w",
+        "deploy": "tsx build.ts -i src -o dist -r --deploy",
+        "deploy:dry-run": "tsx build.ts -i src -o dist -r --dry-run",
+        "map": "tsx build.ts --map",
+        "clean": "rm -rf dist"
     },
     "dependencies": {
         "@rollup/plugin-commonjs": "^28.0.3",
@@ -13,6 +17,7 @@
         "chalk": "^5.4.1",
         "chokidar": "^4.0.3",
         "esbuild": "^0.25.3",
+        "node-fetch": "^3.3.2",
         "prettier": "^3.5.3",
         "tsx": "^4.19.3",
         "typescript": "^5.8.3",
