--- a/node-red-scripts/package.json
+++ b/node-red-scripts/package.json
@@ -4,20 +4,21 @@
     "description": "Collection of scripts for usage within Home Assistant's Node Red instance",
     "type": "module",
     "scripts": {
-        "build": "tsx build.ts -i src -o dist -r",
-        "watch": "tsx build.ts -i src -o dist -r -w",
-        "build:deploy": "tsx build.ts -i src -o dist -r --deploy",
+        "build": "tsx build -i src -o dist -r",
+        "watch": "tsx build -i src -o dist -r -w",
+        "build:deploy": "tsx build -i src -o dist -r --deploy",
         "deploy": "tsx src/deploy/deploy.ts",
         "deploy:all": "tsx src/deploy/deploy.ts --all",
         "deploy:dry-run": "tsx src/deploy/deploy.ts --dry-run",
         "deploy:rename": "tsx src/deploy/deploy.ts --rename-only",
-        "map": "tsx build.ts --map",
-        "map:ai": "tsx build.ts --map --ai",
+        "map": "tsx build --map",
+        "map:ai": "tsx build --map --ai",
         "clean": "rm -rf dist"
     },
     "dependencies": {
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-node-resolve": "^16.0.1",
+        "axios": "^1.11.0",
         "chalk": "^5.4.1",
         "chokidar": "^4.0.3",
         "dotenv": "^16.3.1",
