--- a/node-red-scripts/package.json
+++ b/node-red-scripts/package.json
@@ -7,10 +7,10 @@
         "build": "tsx build -i src -o dist -r",
         "watch": "tsx build -i src -o dist -r -w",
         "build:deploy": "tsx build -i src -o dist -r --deploy",
-        "deploy": "tsx src/deploy/deploy.ts",
-        "deploy:all": "tsx src/deploy/deploy.ts --all",
-        "deploy:dry-run": "tsx src/deploy/deploy.ts --dry-run",
-        "deploy:rename": "tsx src/deploy/deploy.ts --rename-only",
+        "deploy": "tsx build/deploy/deploy.ts",
+        "deploy:all": "tsx build/deploy/deploy.ts --all",
+        "deploy:dry-run": "tsx build/deploy/deploy.ts --dry-run",
+        "deploy:rename": "tsx build/deploy/deploy.ts --rename-only",
         "map": "tsx build --map",
         "map:ai": "tsx build --map --ai",
         "clean": "rm -rf dist"
