feat: Add new input booleans for schedule and presence pause
fix: Update battery entity friendly name handling for better type safety

refactor: Change door state utility import path for consistency

enhance: Improve presence influx logger with detailed metrics and state history

fix: Adjust presence handling logic to account for cool down periods

refactor: Update scheduling utility imports for better organization

feat: Introduce new scheduling functions for continuous and trigger schedules

refactor: Enhance service call processing with better validation and error handling

refactor: Consolidate datetime utilities for improved scheduling functionality

chore: Update scenes.yaml with new light entities and state adjustments

feat: Implement service call processing logic for better action handling

feat: Add comprehensive datetime utilities for scheduling and time management

--- a/input_boolean.yaml
+++ b/input_boolean.yaml
@@ -4,3 +4,9 @@ nighttime:
 daytime:
     name: "Daytime"
     icon: mdi:weather-sunny
+schedule_pause:
+    name: "Schedule Pause"
+    icon: mdi:pause
+presence_pause:
+    name: "Presence Pause"
+    icon: mdi:account-off
