--- a/scenes.yaml
+++ b/scenes.yaml
@@ -281,20 +281,18 @@
       supported_features: 0
       state: 'off'
     lock.back_door:
-      changed_by: Mike Babb
-      battery_level: 87
       friendly_name: Back Door
       supported_features: 0
-      state: locked
+      state: unavailable
     lock.front_door:
       changed_by: Mike Babb
-      battery_level: 90
+      battery_level: 86
       friendly_name: Front Door
       supported_features: 0
       state: locked
     lock.garage_entry_door:
       changed_by: Mike Babb
-      battery_level: 31
+      battery_level: 19
       friendly_name: Garage Entry Door
       supported_features: 0
       state: locked
@@ -614,7 +612,7 @@
       percentage: 50
       percentage_step: 25
       preset_mode:
-      screen_status: true
+      screen_status: false
       child_lock: false
       night_light: 'off'
       mode: manual
@@ -712,6 +710,13 @@
       - onoff
       color_mode:
       friendly_name: 'Plant Ceiling Light '
+      supported_features: 0
+      state: 'off'
+    light.hey_lamp_3:
+      supported_color_modes:
+      - onoff
+      color_mode:
+      friendly_name: Hey Lamp 3
       supported_features: 0
       state: 'off'
   icon: mdi:weather-night
@@ -829,6 +834,8 @@
     light.rose_light:
       entity_only: true
     light.plant_ceiling_light:
+      entity_only: true
+    light.hey_lamp_3:
       entity_only: true
 - id: '2000310699005'
   name: Daytime
