--- a/customize.yaml
+++ b/customize.yaml
@@ -1,8 +1,3 @@
-# Hack to modify the zone.home radius
-# Unfortunately, the zone.home entity is not customizable in the UI
-# And you also must include, manually, the persons that are in the zone
-customize:
-    zone.home:
-        radius: 40
-        persons:
-            - person.mike
+# Zone customizations
+zone.home:
+  radius: 40
